// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders CustomEmpty without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-select"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1sr8su7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-w398ts"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="MultiSelect"
            class="rcx-box rcx-box--full rcx-input-box--undecorated rcx-select__focus rcx-css-trljwa rcx-css-3fq6z9"
            role="combobox"
            type="button"
          >
            Placeholder here...
          </button>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-select__addon rcx-css-x7bl3q rcx-css-1bprq55"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-4pvxx3"
        >
          
        </i>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-select"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1sr8su7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-w398ts"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="MultiSelect"
            class="rcx-box rcx-box--full rcx-input-box--undecorated rcx-select__focus rcx-css-trljwa rcx-css-3fq6z9"
            role="combobox"
            type="button"
          >
            Placeholder here...
          </button>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-select__addon rcx-css-x7bl3q rcx-css-1bprq55"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-4pvxx3"
        >
          
        </i>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders Disabled without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-select disabled"
      disabled=""
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1sr8su7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-w398ts"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="MultiSelect"
            class="rcx-box rcx-box--full rcx-input-box--undecorated rcx-select__focus rcx-css-trljwa rcx-css-3fq6z9"
            disabled=""
            role="combobox"
            type="button"
          >
            Placeholder here...
          </button>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-select__addon rcx-css-x7bl3q rcx-css-1bprq55"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-4pvxx3"
        >
          
        </i>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders Error without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-select invalid"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1sr8su7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-w398ts"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="MultiSelect"
            class="rcx-box rcx-box--full rcx-input-box--undecorated rcx-select__focus rcx-css-trljwa rcx-css-3fq6z9"
            role="combobox"
            type="button"
          >
            Placeholder here...
          </button>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-select__addon rcx-css-x7bl3q rcx-css-1bprq55"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-4pvxx3"
        >
          
        </i>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders WithFilter without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-select"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1sr8su7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-w398ts"
        >
          <input
            aria-expanded="false"
            aria-haspopup="listbox"
            class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box rcx-css-trljwa rcx-css-pqpp8q"
            placeholder="Placeholder here..."
            role="combobox"
            value=""
          />
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-select__addon rcx-css-x7bl3q rcx-css-1bprq55"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-4pvxx3"
        >
          
        </i>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders WithValue without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-select"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1sr8su7"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-w398ts"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="MultiSelect"
            class="rcx-box rcx-box--full rcx-input-box--undecorated rcx-select__focus rcx-css-trljwa rcx-css-3fq6z9"
            role="combobox"
            type="button"
          />
          <button
            class="rcx-box rcx-chip rcx-css-trljwa"
            tabindex="-1"
            type="button"
          >
            <span
              class="rcx-box rcx-chip__text rcx-css-trljwa"
            >
              a teste 1
            </span>
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-trljwa rcx-css-1wv1vf9"
            >
              
            </i>
          </button>
          <button
            class="rcx-box rcx-chip rcx-css-trljwa"
            tabindex="-1"
            type="button"
          >
            <span
              class="rcx-box rcx-chip__text rcx-css-trljwa"
            >
              b teste 2
            </span>
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-trljwa rcx-css-1wv1vf9"
            >
              
            </i>
          </button>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-select__addon rcx-css-x7bl3q rcx-css-1bprq55"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-4pvxx3"
        >
          
        </i>
      </div>
    </div>
  </div>
</body>
`;
